apps/production/kaneo/kaneo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaneo-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaneo-api
  template:
    metadata:
      labels:
        app: kaneo-api
    spec:
      containers:
        - name: kaneo-api
          image: ghcr.io/usekaneo/api:2.7.7@sha256:af95d89fb5aa95e769410a21ee2387fe01eda4501a4c54f709ca86555a25ad07
          ports:
            - containerPort: 1337
