apps/production/kaneo/kaneo-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaneo-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaneo-web
  template:
    metadata:
      labels:
        app: kaneo-web
    spec:
      containers:
        - name: kaneo-web
          image: ghcr.io/usekaneo/web:2.7.7@sha256:1a15508683d755b47e9fe111f40fbf3e89493c9ecc85f60c0919683a69bef8ab
          ports:
            - containerPort: 5173
