apps/production/kaneo/kaneo-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaneo-web
  namespace: default
spec:
  selector:
    app: kaneo-web
  ports:
  - port: 5173
    targetPort: 5173
